adicionando os textos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>
+        Hello World
+    </h1>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quod vitae quae, cumque amet porro, nihil expedita nisi blanditiis, atque iste. Odio necessitatibus quam esse est obcaecati, eaque officia modi.
+    </p>
+    
 </body>
 </html>
