--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quod vitae quae, cumque amet porro, nihil expedita nisi blanditiis, atque iste. Odio necessitatibus quam esse est obcaecati, eaque officia modi.
     </p>
-    
+
+    <footer>
+        <p>Site criado por Giselly</p>
+    </footer>
+
 </body>
 </html>
