--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         Hello World
     </h1>
 
+    <h2>
+        Aula de Git
+    </h2>
+
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quod vitae quae, cumque amet porro, nihil expedita nisi blanditiis, atque iste. Odio necessitatibus quam esse est obcaecati, eaque officia modi.
     </p>
